--- a/styles.css
+++ b/styles.css
@@ -42,10 +42,10 @@ header{
 /* get logoText to left */
 .logo{
   cursor: pointer;
-  font-size: 2.5vw ;
   font-weight: 800;
   font-family: Poppins;
   margin-right: auto;
+  z-index: -2;
 }
 
 
@@ -88,7 +88,6 @@ button{
   text-align: center;
   text-decoration: none;
   border-radius:70px;
-  font-size: 1.3vw;
   font-weight: 500;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
@@ -122,7 +121,7 @@ width: 4vw;
 background-color: green;
 justify-content: space-between;
 position: relative;
-margin: 3px 0;
+margin: 1.5px 0;
 border-radius: 10px;
 
 }
@@ -178,20 +177,13 @@ border-radius: 10px;
 
     /* ------ CONTENT --------------*/ 
 
-    h2{
+   h2, h3{
       font-family: Poppins;
       color: rgb(90, 90, 90);
-    font-size:  2vw;
-    font-weight: bolder;
+   
   }
   
-  h3{
-    font-family: Poppins;
-    color: rgb(90, 90, 90);
-  font-size:  1.8vw;
-  font-weight: bolder;
-  }
-
+  
 
     .btnInPage{
       background-color: green;
@@ -348,7 +340,7 @@ left: 0;
   justify-content: space-between  ;
   top: 50px;
   background-color: white;
-   z-index: -1;
+  z-index: -1;
 }
 
 
