--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,413 +1,25 @@
-
-
-
-/* get font */
-
-
-/*overrides everything */
-* {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-  font-family: Poppins;
-   
-}
-
-/* New header */
-/* .nav{top: 500px;
-
-} */
-
-header li, a, button{
-  font-family: Poppins;
-  font-weight: 500;
-  color: 656565;
-  text-decoration: none;
-  list-style: none;
-}
-
-header{
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 10px 10%;
- 
-}
-
-
-/* Image container*/
-.fotoram{
-  align-self: center;
-  border-radius:60px;
-	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
- }
-
-img {vertical-align: middle;
-    display: flex;
-    flex-grow: right;
-    text-align:right;
-    margin-right: -10;
-   
-  }
-
- /* Next & previous buttons */
-.prev, .next{
-  cursor: pointer;
-  position: absolute;
-  top: 50%;
-  width: auto;
-  padding: 16px;
-  margin-top: -22px;
-  background-color: rgba(0, 128, 0, 0.37);
-  color: white;
-  font-weight: bold;
-  font-size: 2.5vw;
-  transition: 0.6s ease;
-  border-radius: 0 3px 3px 0;
-  user-select: none;
-}
-
-/* On hover, add a black background color with a little bit see-through */
-.prev:hover, .next:hover {
-  background-color: rgba(255, 255, 255, 0.301);
-  color: green;
-
-}
-/* Position the "next button" to the right */
-.next{
-  right: 0;
-  border-radius: 3px 0 0 3px
-}
-
-.prev{
-  left: 0;
-}
-
-/* Number text (1/3 etc) */
-.numbertext {
-  color: #f2f2f2;
-  font-size: 12px;
-  padding: 8px 12px;
-  position: absolute;
-  top: 0;
-}
-
-
-
-/* The dots/bullets/indicators */
-.dot {
-  cursor: pointer;
-  height: 15px;
-  width: 15px;
-  margin: 0 2px;
-  background-color: 686868;
-  border-radius: 50%;
-  display: inline-block;
-  transition: background-color 0.6s ease;
-}
-
-.active, .dot:hover {
-  background-color: green;
-}
-
-.active, .dot:hover {
-  background-color: #717171;
-}
-
-
-
-
-
-
-
-
-
-/* image resizing responsiveness*/
-
-
-/* hela hmtl */ 
-html {
-    font-size: 70%;
-    box-sizing: border-box;
-}
-
-/* settings body text */
-
-body {
-  margin-left: 100px;
-  margin-right: 100px;
-  margin-top: 8px;
-  min-height: 100vh;
-  color: rgb(90, 90, 90);
-  font-family: Poppins;
-  font-size: 1vw;
- 
-}
-
-
-
-.bodyHeader {
-  min-height: 100vh;
-  color: rgb(90, 90, 90);
-  font-family: Poppins;
-  font-size: 1vw;
-  height: max-content;
-}
-
-
-/* header inside texts area */ 
-
-
-h2{
-    font-family: Poppins;
-    color: rgb(90, 90, 90);
-	font-size:  3vw;
-	font-weight: bolder;
-}
-
-h3{
-  font-family: Poppins;
-  color: rgb(90, 90, 90);
-font-size:  2vw;
-font-weight: bolder;
-}
-
-/* get a word from header and make it black */
-.fokusHeader{
-	color: black;
-	font-weight: bold;
-}
-
-/* btn till namnsamlingen*/
-
-.till{
-  background-color: green;
-  cursor: pointer;
-  color: white;
-  border: 2px solid green;
-  padding: 5px 15px;
-  text-align: center;
-  text-decoration: none;
-  border-radius:70px;
-  font-size: 2vw;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-   margin-left:  auto;
- }
-
-.till:hover, .till:active {
-  background-color: white;
-  color: green;
-  border: 2px solid green;
-  padding: 10px 10px;
-  border-top-left-radius:80px;
-  border-top-right-radius:80px;
-  border-bottom-left-radius:80px;
-  border-bottom-right-radius:80px;
-   transition: all 0.3s ease-in;
-}
-/* formatting menyn*/
-.nav_links {        
-  display: flex;
-  list-style: none;
-  color:505050;
-  font-size:2vw;
-  overflow: visible;
-  height: 40%;
- }
-
- .nav_links li{
-   display: inline-block;
-   padding: 0px 20px;
- }
-
- button{
-   padding: 9px 25px;
-   transform: all 0.3s ease 0s;
- }
-
-
-
-
-
-
-
-
-
-header{
-  display: flex;
-  justify-content: flex-end;
-  align-items: center;
-  padding: 30px 10%;
-
-}
-
-.navbar{
-  overflow: visible;
-  position: fixed;
-  background-color: white;
-  top: 0;
-  padding: 30px 10px;
-  width: 100%;
-  z-index: 1;
-  display: flex;
-  justify-content: flex-end;
-  
-  }
-
-.responsive-iframe {
-  position: relative;
-  top: 100;
-  left: 0;
-  bottom: 100;
-  right: 0;
-  height:300px;
-  display: inline;
-  }
-
-
-/* Creating tabs to Fakta */
-/* Style the tab */
-.tab {
-  position: fixed;
-  top: 285px;
-  margin-left:40%;
-  display: flex;
-  overflow: hidden;
-  z-index: 2;
-}
-
-/* Style the buttons inside the tab */
-.tab button {
-  background-color: inherit;
-  float: left;
-  border: none;
-  outline: none;
-  cursor: pointer;
-  padding: 14px 16px;
-  transition: 0.3s;
-  font-size: 17px;
-}
-
-/* Change background color of buttons on hover */
-.tab button:hover {
-  background-color: #ddd;
-}
-
-/* Create an active/current tablink class */
-.tab button.active {
-  background-color: #ccc;
-}
-
-/* Style the tab content */
-.tabcontent {
-  display: none;
-  padding: 6px 12px;
-  border: 1px solid #ccc;
-  border-top: none;
-}
-
-/*  Getting split header*/ 
-
-/* Split the screen in 30/70 halves */
-.split {
-  width: 70%;
-  top: 0;
-  height: auto;
-  position: fixed;
-  z-index: 1;
-  padding-left: 20px;
-   padding-left: 20px;
- overflow: visible;
-}
-
-/* Control the left side */
-.left {
-  left: 0;
-  overflow: visible;
-
-}
-
-/* THE GRID MODEL  */
-
-
-.grid-container {
-  display: grid;
-  grid-template-columns: 40% 50%;
-  grid-column-gap: 20px;
-  padding: 10px;
-  overflow:hidden;
-  position: relative;
-}
-
-.grid-container > div {
-  background-color: rgba(203 203, 203, 0.788);
-  text-align: left;
-  padding: 20px 0;
-  font-size: 1.5vw;
-  position: relative;
- 
-}
-
-
-.grid-containerP {
-  display: grid;
-  grid-template-columns: 40% 50%;
-  grid-column-gap: 12%;
-  padding: 5%;
-  overflow:hidden;
-  position: relative;
-  margin-left: -20px;
-}
-
-.grid-containerP > div {
-  text-align: left;
-  padding: 20px 0;
-  font-size: 1.5vw;
-  position: relative;
- 
-}
-
-
-
-
-.grid-container1 {
-  display: grid;
-  grid-template-columns: 50% 50%;
-  padding-left: 20px;
-  grid-column-gap:13% ;
-
-}
-
-.grid-container1 > div {
-  background-color: rgba(203 203, 203, 0.788);
-  text-align: left;
-  padding: 24px ;
-  font-size: 1.5vw;
- 
-
-}
-/* Control the right side */
-.right {
-  right: 0;
-  overflow: visible;
-
-}
-
-
-
 /* get font */
 @import url('https://fonts.googleapis.com/css?family=Open+Sans&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Poppins&display=swap');
 
-/*overrides everything */
+/*override everything */
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
   font-family: Poppins;
+  color: #656565;
    
 }
 
+body{
+  margin: 20px;
+  padding:0%;
+}
+
+
+
+/*format font in header*/
 header li, a, button{
   font-weight: 300;
   color: 656565;
@@ -415,33 +27,58 @@ header li, a, button{
  
   
 }
+/* adjust menu to right and logo to left */
 header{
   display: flex;
   justify-content: flex-end;
-  padding: 10px 10%;
+  padding: 10px 10px;
+  position: fixed;
+  width: 100%;
+  background-color: white;
+  z-index: 1;
+  top:0px;
 }
 
+
+/* get logoText to left */
 .logo{
   cursor: pointer;
-  font-size: 2vw ;
   font-weight: 800;
   font-family: Poppins;
   margin-right: auto;
+  z-index: -2;
+  width: 50%;
 }
 
-.nav_links{ 
-  list-style: none;
-  display: inline-block
-  ;
-}
 
+/* distribute navlinks in line */
+.nav_links li{ 
+ display: inline-block;
+ font-size: 1.5 vw;
+ min-height: 3vh;
+ margin-top:14px;;
+}
+.nav_links li:nth-child(4){
+  padding-right: 1rem;
+ }
+
+
+
+
+/*transition to navlinks*/
 .nav_links a {
     transition: all 0.3s ease 0s;
+}
+
+a:visited {
+  color: #656565;
+  text-decoration: none;
 }
 
 .nav_links a:hover {
   transition: all 0.3s ease 0s;
   color: green;
+ font-weight: 500;
 }
 
 button{
@@ -453,201 +90,111 @@ button{
   text-align: center;
   text-decoration: none;
   border-radius:70px;
-  font-size: 1.3vw;
   font-weight: 500;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
-
-/*   EXPANDABLE MENU IN HEADER   */
-
-/* Dropdown Button */
-.dropbtn {
-  padding: 10;
-  line-break: strict;
-
-}
- /* The container <div> - needed to position the dropdown content */
-  .dropdown {
-    position: relative;
-    display: inline-block;
-    padding: 10px;
-    margin: auto;
-    overflow: visible;
-   
-  }
-
-/* Dropdown Content (Hidden by Default) */
-.dropdown-content {
+.closebtn{
   display: none;
-  position: fixed;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  transition:all 0.3s ease-in-out;
-  }
-  /* Links inside the dropdown */
-  .dropdown-content a {
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-    font-size: 1.2vw;
-    overflow: visible;
-  }
-
-  /* Change color of dropdown links on hover */
-   .dropdown-content a:hover {background-color: rgb(224, 238, 221);}
-  
-   /* Show the dropdown menu on hover */
-   .dropdown:hover .dropdown-content {display: block;}
-   
-   /* Change the background color of the dropdown button when the dropdown content is shown */
-    .dropdown:hover .dropbtn:hover {color: #3e8e41; text-decoration:green;}
-
- /* ------------------  TEXT STYLING --------------------- */ 
-/* get a word from header and make it black */
-.fokusHeader{
-	color: black;
-	font-weight: bold;
 }
 
-
-
-.textlinksNer{
-  vertical-align: 20px ;
-}
-
-/* Dropdown Button */
-.dropbtn {
-  padding: 10;
-  line-break: strict;
-
-}
-
-
-
-  /* The container <div> - needed to position the dropdown content */
-  .dropdown {
-    position: relative;
-    display: inline-block;
-    padding: 10px;
-    margin: auto;
-    overflow: visible;
-   
-  }
-  
-  /* Dropdown Content (Hidden by Default) */
-  .dropdown-content {
-    display: none;
-    position: fixed;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    transition:all 0.3s ease-in-out;
-    }
-    /* Links inside the dropdown */
-    .dropdown-content a {
-      color: black;
-      padding: 12px 16px;
-      text-decoration: none;
-      display: block;
-      font-size: 1.2vw;
-      overflow: visible;
-    }
-    
-  /* Change color of dropdown links on hover */
-  .dropdown-content a:hover {background-color: #ddd;}
-  
-  /* Show the dropdown menu on hover */
-  .dropdown:hover .dropdown-content {display: block;}
-  
-  /* Change the background color of the dropdown button when the dropdown content is shown */
-   .dropdown:hover .dropbtn {color: #3e8e41; text-decoration:green;}
-  
-
-
-/* "logo" */
-.textGSKBill { 
-  cursor: pointer;
-  color: 686868;
-  font-weight: bold;
-  font-size: 3rem;
-  margin-right: auto;
+button:hover, button:active {
+  background-color: white;
+  color: green;
+  border: 2px solid green;
+  border-radius:70px;
+  transition: all 0.3s ease-in ;
+  overflow-block: scroll;
 
   }
 
-.textGSKBill a{
- text-decoration: none;
-}
-
-/* positioning of header*/
 
 
-.kontent{
-  margin-top: 15%;
-  margin-left: 8%;
-  margin-right:8% ;
-  }
+.toggleBtn{
+  display: none;
+  width: 10%;
+  z-index: -1;
+ }
 
-
-.kontent a{
-  text-decoration: underline;
-}
-.homeKontent{
-  margin-top: 30%;}
  
 
- .column {
-  position: relative;
-  width:50%;
-  padding-left: 2% ;
-  padding-right: 2%;
-  image-rendering: optimizeSpeed;
+.toggleBtn .bar{
+height: 4px;
+width: 4vw;
+background-color: green;
+justify-content: space-between;
+position: relative;
+margin: 1.5px 0;
+border-radius: 10px;
 
-   
-   
-  /* height: 300px;  Should be removed. Only for demonstration */
+    
+
+@media screen and (max-height: 700px) {
+.fa-caret-down {
+  float: right;
+  padding-right: 8px;
+}
+/* Fixed sidenav, full height */
+.sidenav {
+  height: 100%;
+  width: 200px;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  right: 0;
+  overflow-x: hidden;
+  padding-top: 20px;
 }
 
-/* Clear floats after the columns */
-.row:after {
-  content: "";
-  display: table;
-  clear: both;
-}
-
-/* Innehåll*/ 
-
-.homeText{
-	font-size: 1.8vw;
-	padding: 20px ;
-}
-
-.broadtext{
-  font-size: 1vw;
-
-  margin-right: 50px;
-
-}
-
- /* Bilder*/ 
-.mySlides{
-  display: none;
-	border-radius:60px;
-	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+/* Style the sidenav links and the dropdown button */
+.sidenav a, .dropdown-btn {
+  padding: 6px 8px 6px 16px;
+  text-decoration: none;
+  font-size: 20px;
+  color: #818181;
+  display: block;
+  border: none;
+  background: none;
   width: 100%;
-	
+  text-align: left;
+  cursor: pointer;
+  outline: none;
 }
 
+/* On mouse-over */
+.sidenav a:hover, .dropdown-btn:hover {
+  color: #f1f1f1;
+}
 
-.btnInPage{
+/* Main content */
+.main {
+  margin-left: 200px; /* Same as the width of the sidenav */
+  font-size: 20px; /* Increased text to enable scrolling */
+  padding: 0px 10px;
+}
+
+/* Add an active class to the active dropdown button */
+.active {
   background-color: green;
   color: white;
-  border: 2px solid green;
-  padding: 10px 20px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  border-bottom-right-radius:80px;
-  font-size: 2vw;
-  font-family: Poppins;
-  width: 100%;
-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
+
+/* Dropdown container (hidden by default). Optional: add a lighter background color and some left padding to change the design of the dropdown content */
+.dropdown-container {
+  display: none;
+  background-color: green;
+  padding-left: 8px;
+}
+
+/* Optional: Style the caret down icon */
+.fa-caret-down {
+  float: right;
+  padding-right: 8px;
+}
+}
+
+/* Some media queries for responsiveness */
+@media screen and (max-height: 450px) {
+  .sidenav {padding-top: 15px;}
+  .sidenav a {font-size: 18px;}
+}}
