--- a/stylesheet.css
+++ b/stylesheet.css
@@ -2,83 +2,53 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Poppins&display=swap');
 
-/*override everything */
-* {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-  font-family: Poppins;
-  color: #656565;
-   
-}
-
-body{
-  margin: 20px;
-  padding:0%;
-}
+body {margin: 0 10px;
+  font-family:Poppins;
+  color: #656565;}
 
 
-
-/*format font in header*/
-header li, a, button{
-  font-weight: 300;
-  color: 656565;
-  text-decoration: none;
- 
+.topnav {
+  overflow: hidden;
+  background-color:white;
+  position: absolute;
   
 }
-/* adjust menu to right and logo to left */
-header{
-  display: flex;
-  justify-content: flex-end;
-  padding: 10px 10px;
-  position: fixed;
-  width: 100%;
-  background-color: white;
-  z-index: 1;
-  top:0px;
+
+.topnav a {
+  float: left;
+  display: block;
+  color: #656565;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+  
 }
 
 
-/* get logoText to left */
-.logo{
+a:visited {
+  color: #656565;
+ }
+
+.active {
+  background-color: rgba(0, 128, 0, 0.178);
+  color: white;
+  
+}
+.fa-home{font-size: x-large;}
+
+#logo{
   cursor: pointer;
   font-weight: 800;
   font-family: Poppins;
   margin-right: auto;
   z-index: -2;
-  width: 50%;
+  text-align: left;
 }
 
 
-/* distribute navlinks in line */
-.nav_links li{ 
- display: inline-block;
- font-size: 1.5 vw;
- min-height: 3vh;
- margin-top:14px;;
-}
-.nav_links li:nth-child(4){
-  padding-right: 1rem;
- }
-
-
-
-
-/*transition to navlinks*/
-.nav_links a {
-    transition: all 0.3s ease 0s;
-}
-
-a:visited {
-  color: #656565;
-  text-decoration: none;
-}
-
-.nav_links a:hover {
-  transition: all 0.3s ease 0s;
-  color: green;
- font-weight: 500;
+.topnav .icon {
+  display: none;
 }
 
 button{
@@ -92,109 +62,104 @@ button{
   border-radius:70px;
   font-weight: 500;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  position: absolute;
+  right: 5px;
+  top:5px;
 }
 
-.closebtn{
-  display: none;
+
+.dropdown {
+  float: left;
+  overflow: hidden;
+  top:102px;
+  margin-top: 100px;
 }
 
-button:hover, button:active {
-  background-color: white;
-  color: green;
-  border: 2px solid green;
-  border-radius:70px;
-  transition: all 0.3s ease-in ;
-  overflow-block: scroll;
-
-  }
-
-
-
-.toggleBtn{
-  display: none;
-  width: 10%;
-  z-index: -1;
- }
-
- 
-
-.toggleBtn .bar{
-height: 4px;
-width: 4vw;
-background-color: green;
-justify-content: space-between;
-position: relative;
-margin: 1.5px 0;
-border-radius: 10px;
-
-    
-
-@media screen and (max-height: 700px) {
-.fa-caret-down {
-  float: right;
-  padding-right: 8px;
-}
-/* Fixed sidenav, full height */
-.sidenav {
-  height: 100%;
-  width: 200px;
-  position: fixed;
-  z-index: 1;
-  top: 0;
-  right: 0;
-  overflow-x: hidden;
-  padding-top: 20px;
-}
-
-/* Style the sidenav links and the dropdown button */
-.sidenav a, .dropdown-btn {
-  padding: 6px 8px 6px 16px;
-  text-decoration: none;
-  font-size: 20px;
-  color: #818181;
-  display: block;
+.dropdown .dropbtn {
+  font-size: 17px;    
   border: none;
-  background: none;
-  width: 100%;
-  text-align: left;
-  cursor: pointer;
   outline: none;
+  color: #656565;
+  padding: 14px 16px;
+  background-color: inherit;
+  font-family: inherit;
+  margin: 0;
 }
 
-/* On mouse-over */
-.sidenav a:hover, .dropdown-btn:hover {
-  color: #f1f1f1;
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
 }
 
-/* Main content */
-.main {
-  margin-left: 200px; /* Same as the width of the sidenav */
-  font-size: 20px; /* Increased text to enable scrolling */
-  padding: 0px 10px;
+.dropdown-content a {
+  float: none;
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
 }
 
-/* Add an active class to the active dropdown button */
-.active {
-  background-color: green;
+.topnav a:hover, .dropdown:hover .dropbtn {
+  background-color: #555;
   color: white;
 }
 
-/* Dropdown container (hidden by default). Optional: add a lighter background color and some left padding to change the design of the dropdown content */
-.dropdown-container {
-  display: none;
-  background-color: green;
-  padding-left: 8px;
+.dropdown-content a:hover {
+  background-color: #ddd;
+  color: black;
 }
 
-/* Optional: Style the caret down icon */
-.fa-caret-down {
-  float: right;
-  padding-right: 8px;
-}
+.dropdown:hover .dropdown-content {
+  display: block;
 }
 
-/* Some media queries for responsiveness */
-@media screen and (max-height: 450px) {
-  .sidenav {padding-top: 15px;}
-  .sidenav a {font-size: 18px;}
-}}
+@media screen and (max-width: 700px) {
+  .topnav a:not(:first-child), .dropdown .dropbtn {
+    display: none;
+  }
+  .topnav a.icon {
+    float: right;
+    display: block;
+  }
+  button{
+    background-color: green;
+    cursor: pointer;
+    color: white;
+    border: 2px solid green;
+    padding: 5px 15px;
+    text-align: center;
+    text-decoration: none;
+    border-radius:70px;
+    font-weight: 500;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    position: absolute;
+    right: 5px;
+    top:5px;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .topnav.responsive {position: relative;}
+  .topnav.responsive .icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  .topnav.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+  .topnav.responsive .dropdown {float: none;}
+  .topnav.responsive .dropdown-content {position: relative;}
+  .topnav.responsive .dropdown .dropbtn {
+    display: block;
+    width: 100%;
+    text-align: left;
+  }
+}
