--- a/stylesheet2.css
+++ b/stylesheet2.css
@@ -4,14 +4,15 @@
 
 body {
   font-family:Poppins;
-  color: #656565;}
+  color: #656565;
+  width:100%;}
 
 
 .topnav {
-  overflow: hidden;
+  overflow: visible;
   background-color:white;
-
-   }
+  position: absolute;
+  }
 
 
 
@@ -69,13 +70,14 @@ button{
   z-index: -1;
 }
 
-/* Dropdown container - needed to position the dropdown content */
+
 .dropdown {
   float: left;
   overflow: hidden;
+  margin-top: 10px;
+  right: 25px;
 }
 
-/* Style the dropdown button to fit inside the topnav */
 .dropdown .dropbtn {
   font-size: 17px;    
   border: none;
@@ -85,10 +87,9 @@ button{
   background-color: inherit;
   font-family: inherit;
   margin: 0;
-/*   cursor: pointer; */
+  cursor: pointer;
 }
 
-/* Style the dropdown content (hidden by default) */
 .dropdown-content {
   display: none;
   position: absolute;
@@ -98,7 +99,6 @@ button{
   z-index: 1;
 }
 
-/* Style the links inside the dropdown */
 .dropdown-content a {
   float: none;
   color: black;
@@ -106,26 +106,24 @@ button{
   text-decoration: none;
   display: block;
   text-align: left;
- /*  overflow: visible; */
+  overflow: visible;
 }
 
-/* Add a dark background on topnav links and the dropdown button on hover */
 .topnav a:hover, .dropdown:hover .dropbtn {
-  background-color: #555;
-  color: white;
+  background-color:rgba(0, 128, 0, 0.247);
   
 }
-/* Add a grey background to dropdown links on hover */
+
 .dropdown-content a:hover {
   background-color: #ddd;
   color: black;
 }
-/* Show the dropdown menu when the user moves the mouse over the dropdown button */
+
 .dropdown:hover .dropdown-content {
   display: block;
 }
-/* The "responsive" class is added to the topnav with JavaScript when the user clicks on the icon. This class makes the topnav look good on small screens (display the links vertically instead of horizontally) */
-/* @media screen and (max-width: 600px) {
+
+@media screen and (max-width: 600px) {
   .topnav a:not(:first-child), .dropdown .dropbtn {
     display: none;
   }
@@ -151,14 +149,14 @@ button{
     right: 5px;
     top:5px;
   }
-} */
-/* The "responsive" class is added to the topnav with JavaScript when the user clicks on the icon. This class makes the topnav look good on small screens (display the links vertically instead of horizontally) */
+}
+
 @media screen and (max-width: 600px) {
   .topnav.responsive {position: relative;}
   .topnav.responsive .icon {
     position: absolute;
     right: 0;
-    top: 0;
+    top: 15px;
   }
   .topnav.responsive a {
     float: none;
