--- a/styles.css
+++ b/styles.css
@@ -9,36 +9,48 @@ body {margin:0;font-family:Arial;
     text-decoration: none;
   }
 
+
+  
+
+
+  
+  @media screen and (max-width: 600px) {
+
+    .topnav a.icon {
+      float: right;
+      display: block;
+      padding: 0;
+    }
+  }
+  
+ 
+
 header{
    background-color: white;
    z-index: 1;
    position: sticky;
    top: 0;
-   height: 80px;
+   height: 100px;
    overflow: visible;
 }
 .kontent{
   top:120px;
   }
-.topnav {
-  overflow: visible;
-  background-color:white;
-  display: flex;
-  justify-content: flex-end;
-  text-decoration: none;
-  position: fixed;
+ .topnav {
   right: 0;
-  top: 80;
+  top: 90;
+  position: fixed;
 }
-
+/*  */
 .topnav a {
-  float: left;
+  float: center  ;
   display: block;
   color:656565;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
   font-size: 17px;
+  text-align: center;
  
 }
 
@@ -55,6 +67,7 @@ header{
 .dropdown {
   float: left;
   overflow: hidden;
+  text-align: center;
 }
 
 .dropdown .dropbtn {
@@ -66,6 +79,7 @@ header{
   background-color: inherit;
   font-family: inherit;
   margin: 0;
+  text-align: center;
 }
 
 .dropdown-content {
@@ -75,6 +89,7 @@ header{
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
+  text-align: center;
 }
 
 .dropdown-content a {
@@ -84,10 +99,11 @@ header{
   text-decoration: none;
   display: block;
   text-align: left;
+  text-align: center;
 }
 
 .topnav a:hover, .dropdown:hover .dropbtn {
-  background-color:rgba(0, 128, 0, 0.082);
+  background-color:rgba(5, 14, 5, 0.082);
   color: green;
 }
 
@@ -101,7 +117,7 @@ header{
 }
 
 .logo{
-   cursor: pointer;
+  cursor: pointer;
   font-weight: 800;
   font-family: Poppins;
   margin-right: auto;
@@ -114,8 +130,8 @@ header{
 }
 
 .logoSm{
-  cursor: pointer;
-  display: none;
+ cursor: pointer;
+ display: none;
  font-weight: 800;
  font-family: Poppins;
  margin-right: auto;
@@ -176,23 +192,18 @@ button{background-color: green;
     color: green;
     font-weight: 400;
     position: absolute;
-    top: 0;
+    top: 80;
     right: 0;
     margin-right: -2;
+    background-color: whitesmoke;
   }
   h1{
     font-size: 25px;
   }
 }
-#fakta{content:'<br>Frakta';
-    padding:20px;
-  }
 
-.icon{
-  position: absolute;
-    right: 0;
-    top: 0;
-}
+
+
 
 
 @media (min-width: 1200px) {
@@ -204,42 +215,29 @@ button{background-color: green;
 @media screen and (max-width: 600px) {
   .topnav.responsive {position: relative;}
   .topnav.responsive .icon {
-    position: absolute;
-    left: 0;
-    top: 30;
-    width: 60px;
-  }
+    position: sticky;
+    right: 0;
+    width: 50px;
+    }
 
-  .fa-caret-down{
-    display: none;
-  }
+
   .topnav.responsive a {
     float: none;
     display: block;
     text-align: left;
   }
   .topnav.responsive .dropdown {float: none;}
-  .topnav.responsive .dropdown-content {position: relative;}
+  .topnav.responsive .dropdown-content {
+    position: relative;
+    padding-left: 5;
+    font-size: 14px;
+  }
   .topnav.responsive .dropdown .dropbtn {
     display: block;
     width: 100%;
     text-align: left;
   }
 
-
-  .footer{
-    text-align: center;
-    background-color: whitesmoke;
-    position: absolute;
-    margin-top: 10px;
-    bottom: 0;
-    width: 100%;
-    height: inherit;
-   font-size:14px ;
-  }
-  .footerp{
-    text-align: center;
-  }
 
 }
 
