--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,94 +1,46 @@
-/* get font */
-@import url('https://fonts.googleapis.com/css?family=Open+Sans&display=swap');
-@import url('https://fonts.googleapis.com/css?family=Poppins&display=swap');
 
-body {
-  font-family:Poppins;
-  color: #656565;}
-
+body {margin:0;font-family:Arial}
 
 .topnav {
   overflow: hidden;
-  background-color:white;
-
-   }
-
-
-
+  background-color: #333;
+}
 
 .topnav a {
   float: left;
   display: block;
-  color: #656565;
+  color: #f2f2f2;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
   font-size: 17px;
-  cursor: pointer;
-  
 }
-
-
-a:visited {
-  color: #656565;
- }
 
 .active {
-  background-color: rgba(0, 128, 0, 0.178);
+  background-color: #04AA6D;
   color: white;
-  
 }
-.fa-home{font-size: x-large;}
-
-#logo{
-  cursor: pointer;
-  font-weight: 800;
-  font-family: Poppins;
-  margin-right: auto;
-  z-index: -2;
-  text-align: left;
-}
-
 
 .topnav .icon {
   display: none;
 }
 
-button{
-  background-color: green;
-  cursor: pointer;
-  color: white;
-  border: 2px solid green;
-  padding: 5px 15px;
-  text-align: center;
-  text-decoration: none;
-  border-radius:70px;
-  font-weight: 500;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-  top:5px;
-  z-index: -1;
-}
-
-/* Dropdown container - needed to position the dropdown content */
 .dropdown {
   float: left;
   overflow: hidden;
 }
 
-/* Style the dropdown button to fit inside the topnav */
 .dropdown .dropbtn {
   font-size: 17px;    
   border: none;
   outline: none;
-  color: #656565;
+  color: white;
   padding: 14px 16px;
   background-color: inherit;
   font-family: inherit;
   margin: 0;
-/*   cursor: pointer; */
 }
 
-/* Style the dropdown content (hidden by default) */
 .dropdown-content {
   display: none;
   position: absolute;
@@ -98,7 +50,6 @@ button{
   z-index: 1;
 }
 
-/* Style the links inside the dropdown */
 .dropdown-content a {
   float: none;
   color: black;
@@ -106,53 +57,32 @@ button{
   text-decoration: none;
   display: block;
   text-align: left;
- /*  overflow: visible; */
 }
 
-/* Add a dark background on topnav links and the dropdown button on hover */
 .topnav a:hover, .dropdown:hover .dropbtn {
   background-color: #555;
   color: white;
-  
 }
-/* Add a grey background to dropdown links on hover */
+
 .dropdown-content a:hover {
   background-color: #ddd;
   color: black;
 }
-/* Show the dropdown menu when the user moves the mouse over the dropdown button */
+
 .dropdown:hover .dropdown-content {
   display: block;
 }
-/* The "responsive" class is added to the topnav with JavaScript when the user clicks on the icon. This class makes the topnav look good on small screens (display the links vertically instead of horizontally) */
-/* @media screen and (max-width: 600px) {
+
+@media screen and (max-width: 600px) {
   .topnav a:not(:first-child), .dropdown .dropbtn {
     display: none;
   }
   .topnav a.icon {
     float: right;
     display: block;
-    right: 100px;
-    position: absolute;
+  }
+}
 
-  }
-  button{
-    background-color: green;
-    cursor: pointer;
-    color: white;
-    border: 2px solid green;
-    padding: 5px 15px;
-    text-align: center;
-    text-decoration: none;
-    border-radius:70px;
-    font-weight: 500;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    position: absolute;
-    right: 5px;
-    top:5px;
-  }
-} */
-/* The "responsive" class is added to the topnav with JavaScript when the user clicks on the icon. This class makes the topnav look good on small screens (display the links vertically instead of horizontally) */
 @media screen and (max-width: 600px) {
   .topnav.responsive {position: relative;}
   .topnav.responsive .icon {
