--- a/stylesheet.css
+++ b/stylesheet.css
@@ -103,3 +103,41 @@ body {margin:0;font-family:Arial}
     text-align: left;
   }
 }
+@media screen and (max-width: 600px) {
+  
+
+  /* Grid 1:1 in small screens */ 
+  
+  .grid-container {
+    display: grid;
+    grid-template-columns: 90%;
+    padding: 10px;
+    position: relative;
+  
+  }
+  
+  
+  .rubrik{
+  padding: 10;
+  }
+  
+  .empty{
+    padding: 0;
+    margin-top: -10;
+    
+  
+  }
+  
+  .grid-content{
+    padding: 0;
+    /* margin-bottom: -10;
+      */
+  }
+  
+  /* Optional: Style the caret down icon */
+  .fa-caret-down {
+    float: right;
+    padding-right: 8px;
+  }
+  
+  }
